...
import Foundation

/// An individual `Starship` entry per the API schema
struct Starship: SwapiRecord {
    /// The name of this starship. The common name, such as "Death Star".
    let name: String
    /// The model or official name of this starship. Such as "T-65 X-wing" or "DS-1 Orbital Battle Station".
    let model: String
    /// The manufacturer of this starship. Comma separated if more than one.
    let manufacturer: String
    /// The cost of this starship new, in galactic credits.
    let costInCredits: String
    /// The length of this starship in meters.
...
    let hyperdriveRating: String
    /// The Maximum number of Megalights this starship can travel in a standard hour.
    /// A "Megalight" is a standard unit of distance and has never been defined before within the Star Wars universe.
    /// This figure is only really useful for measuring the difference in speed of starships.
    /// We can assume it is similar to AU, the distance between our Sun (Sol) and Earth.
    let MGLT: String
    /// The class of this starship, such as "Starfighter" or "Deep Space Mobile Battlestation"
    let starshipClass: String
    /// An array of People URL Resources that this starship has been piloted by.
    let pilots: [String]
    /// An array of Film URL Resources that this starship has appeared in.
    let films: [String]
    /// the hypermedia URL of this resource.
...
