...
    let classification: String
    /// The designation of this species, such as "sentient".
    let designation: String
    /// The average height of this species in centimeters.
    let averageHeight: String
    /// A comma-separated string of common skin colors for this species,
    /// "none" if this species does not typically have skin.
    let skinColors: String
    /// A comma-separated string of common hair colors for this species,
    /// "none" if this species does not typically have hair.
    let hairColors: String
    /// A comma-separated string of common eye colors for this species,
    /// "none" if this species does not typically have eyes.
...
