...
//

import Foundation

/// An individual `Vehicle` entry per the API schema
struct Vehicle: SwapiRecord {
    /// The name of this vehicle. The common name, such as "Sand Crawler" or "Speeder bike".
    let name: String
    /// The model or official name of this vehicle. Such as "All-Terrain Attack Transport".
    let model: String
    /// The manufacturer of this vehicle. Comma separated if more than one.
    let manufacturer: String
    /// The cost of this vehicle new, in Galactic Credits.
...
